--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.3",
+    "fastclick": "^1.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.4.3",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
